# emerald_template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.APACHE2.0  LICENSE.MIT  helpers.h  loader.py  loader.spec  main.c  main.cpp  readme.md
debug-dependencies/: debug.c
